@@ -89,6 +89,7 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\FAQ$endcw/FAQ/g;
   $string =~ s/\\GNU$endcw/GNU/g;
   $string =~ s/\\GUI$endcw/GUI/g;
+  $string =~ s/\\GuIT$endcw/GuIT/g;
   $string =~ s/\\HarfBuzz$endcw/HarfBuzz/g;
   $string =~ s/\\Hawaii$endcw/Hawai`i/g;
   $string =~ s/\\HINT$endcw/HINT/g;
